<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_tambahfilm"
        android:id="@+id/tv_tambahFilm"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/tv_tambahFilm"
        android:hint="@string/et_judul"
        android:layout_marginTop="50dp"
        android:id="@+id/et_judul" />

    <EditText
        android:id="@+id/et_Sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_judul"
        android:hint="@string/et_sinopsis"
        android:inputType="text"
        android:layout_marginTop="300dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/tambah_film"
        android:id="@+id/btn_tambahfilm"
        android:backgroundTint="#A9A9A9"/>

</RelativeLayout>