<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_Head"
        android:textAlignment="center"
        android:textSize="50dp"
        android:id="@+id/tv_TitleHead" />


    <Button
        android:id="@+id/Btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:backgroundTint="#A9A9A9"
        android:layout_marginLeft="150dp"
        android:text="@string/btn_start" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/tv_pengantar"
        android:text="@string/tv_pengantar"
        android:layout_below="@+id/tv_TitleHead"
        android:textAlignment="center"
        android:textSize="15dp" />

</RelativeLayout>